--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  padding: 100px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +21,6 @@
   width: auto;
   height: auto;
   text-align: center;
-  display: none;
 }
 
 .quiz-intro h1 {
@@ -71,6 +71,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 20px;
 }
